<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:checkableBehavior="single">
    <item
        android:title="More"
        android:checkableBehavior="single">
        <menu android:checkableBehavior="single">
            <group android:checkableBehavior="single">
                <item
                    android:checkableBehavior="single"
                    android:id="@+id/home"
                    android:checkable="true"
                    android:icon="@drawable/ic_home_black_24dp"
                    android:title="@string/home" />
                <item
                    android:checkable="true"
                    android:id="@+id/top_rated"
                    android:icon="@drawable/ic_movie_filter_black_24dp"
                    android:title="@string/top_rated" />
                <item
                    android:checkable="true"
                    android:id="@+id/recommendation"
                    android:icon="@drawable/ic_local_movies_black_24dp"
                    android:title="@string/recommendation" />
            </group>
        </menu>
    </item>
    <item android:title="Others">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:checkable="true"
                    android:id="@+id/update"
                    android:icon="@drawable/ic_cloud_download_white_24dp"
                    android:title="@string/updates" />
                <item
                    android:checkable="true"
                    android:id="@+id/credits"
                    android:icon="@drawable/ic_people_outline_white_24dp"
                    android:title="@string/credtis" />

            </group>
        </menu>
    </item>
</menu>